[project]
name = "zest-releaser-test"
description = "shut"
version = "0.0.1"
authors = [
    { name = "mr duck", email = "mrduck@example.com" }
]

[tool.zest-releaser]
create-wheel = true
extra-message = "[ci skip]"
tag-signing = true

[tool.check-manifest]
ignore = [
    "*cfg",
    ".*yml",
    ".coveragerc",
    ".dockerignore",
    "bootstrap.py",
    "doc/build",
    "doc/build/*",
    "Dockerfile"
]
[tool.setuptools.packages]
find = {}
