[project]
name = "zest-releaser-test"
description = "shut"
version = "0.0.2.dev0"
authors = [
    { name = "mr duck", email = "mrduck@example.com" }
]

[project.urls]
homepage = "http://www.example.com/"

[tool.zest-releaser]
create-wheel = true
extra-message = "[ci skip]"
tag-signing = true

[tool.check-manifest]
ignore = [
    "*cfg",
    ".*yml",
    ".coveragerc",
    ".dockerignore",
    "bootstrap.py",
    "doc/build",
    "doc/build/*",
    "Dockerfile"
]
